# python-750-plc

./: .gitignore  .pre-commit-config.yaml  PUBLISHING.md  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: create-release.yml  publish-pypi.yml
example/: __init__.py  main.py
src/: requirements.txt
src/wg750xxx/: README.md  __init__.py  const.py  exceptions.py  hub.py  main.py  settings.py  wg750xxx.py
src/wg750xxx/modbus/: __init__.py  exceptions.py  registers.py  state.py
src/wg750xxx/modules/: channel.py  module.py  spec.py
src/wg750xxx/modules/analog/: channels.py  modules.py
src/wg750xxx/modules/controller/: modules.py
src/wg750xxx/modules/counter/: channels.py  counter_communication.py  modules.py
src/wg750xxx/modules/dali/: channel_base.py  channel_commands.py  channel_setup.py  channel_status.py  channels.py  control_byte.py  dali_channel_commands.py  dali_commands.py  dali_communication.py  misc.py  module_base.py  module_commands.py  module_setup.py  module_status.py  modules.py  status_byte.py
tests/: __init__.py  conftest.py  high_level_test_proposals.md  notest_modbus_channels.py_  requirements.txt  test_analog.py  test_channel_discovery.py  test_controller.py  test_counter.py  test_dali.py  test_digital.py  test_digital_events.py  test_hub.py  test_hub_config.py  test_modbus.py  test_modbus_channels.py  test_modbus_registers.py  test_modbus_state.py  test_module.py  test_module_discovery.py
tests/mock/: mock_modbus_tcp_client.py  mock_modbus_tcp_client_for_dali_module.py
(+4 files in other folders)
